# finops_gym

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
env/: engine.py  models.py  tasks.py
server/: app.py  models.py
test/: test_api.py  verify_graders.py
